# opencv_video_demo

./: .gitignore  CMakeLists.txt  main.cpp
